<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.HabitList.HabitListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_habit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Toolbar"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_habit_list"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.Toolbar">

            <TextView
                android:id="@+id/textview_habit_list_title"
                style="@style/AppTheme.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_list" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textview_health"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/health_habit"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_health_habit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="6dp">

        </android.support.v7.widget.RecyclerView>


        <TextView
            android:id="@+id/textview_eat_habit"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/eat_habit"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_eat_habit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_social_habit"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/social_life_habit"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_social_habit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_mind_habit"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/mind_habit"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_mind_habit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp">

        </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>