<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.myhabitlist.MyHabitListActivity"
    android:background="#f5f5f5">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_habit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:theme="@style/AppTheme.Toolbar"
        app:elevation="0dp"
        android:background="#f5f5f5">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_my_habit_list"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.Toolbar"
            android:background="#f5f5f5">

            <TextView
                android:id="@+id/textview_habit_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_list"
                style="@style/AppTheme.Toolbar.Title" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_my_habit_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btn_add_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="86dp"
                android:layout_marginRight="86dp"
                android:layout_marginTop="24dp"
                android:text="@string/add_habit"
                style="@style/AppTheme.Button.02.Contained"/>

            <Button
                android:id="@+id/btn_habit_init"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="86dp"
                android:layout_marginRight="86dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:text="@string/init_habit"
                style="@style/AppTheme.Button.04.Outlined"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>