<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/imageview_login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"/>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageview_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_biskit_big_b" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingTop="20dp">


            <LinearLayout
                android:id="@+id/btn_login_kakao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/layout_left_right"
                android:layout_marginRight="@dimen/layout_left_right"
                android:layout_weight="2"
                android:background="@drawable/drawable_login_borders"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_kakao" />

                    <TextView
                        style="@style/AppTheme.TextView.Subtitle.02.white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/applesdgothicneo"
                        android:text="@string/kakao_login" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/layout_left_right"
                android:layout_marginRight="@dimen/layout_left_right"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:background="@drawable/drawable_login_borders"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_facebook" />

                    <TextView
                        style="@style/AppTheme.TextView.Subtitle.02.white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook_login"
                        android:fontFamily="@font/applesdgothicneo"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_login_google"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/layout_left_right"
                android:layout_marginRight="@dimen/layout_left_right"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:background="@drawable/drawable_login_borders"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_google" />

                    <TextView
                        style="@style/AppTheme.TextView.Subtitle.02.white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google_login"
                        android:fontFamily="@font/applesdgothicneo"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_no_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/layout_left_right"
                android:layout_marginRight="@dimen/layout_left_right"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:background="@drawable/drawable_login_borders"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextView.Subtitle.02.white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/no_login"
                    android:fontFamily="@font/applesdgothicneo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/layout_left_right"
                android:layout_marginRight="@dimen/layout_left_right"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textview_forget_account"
                        style="@style/AppTheme.TextView.Subtitle.02.white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="계정을 잃어버리셨나요?"
                        android:clickable="true"
                        android:fontFamily="@font/applesdgothicneo"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>